if ts accept a invalid request, so m_http_sm->t_state.pristine_url won`t be created(which create in do_remap_request). So if ts enable ink_debug_assert, then will assert at URL::string_get_ref().
if ts accept a invalid request, so m_http_sm->t_state.pristine_url won`t be created(which create in do_remap_request). So if ts enable ink_debug_assert, then will assert at URL::string_get_ref().