TS-1628 in validate_unmapped_url(), t_state.pristine_url maybe invalid().